add search Bar functionality

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -4,24 +4,24 @@ header{
     padding: 1rem;
     margin: 1rem;
 }
-a{
-    color: #520852;
-}
-a:hover{
-    color: #df4adf;
-}
-.container{
+.nav-container{
     margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-nav ul{
+.nav-container nav ul{
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 1rem;
 }
-li{
+.nav-container ul li{
     list-style-type: none;
+}
+.nav-container ul li a{
+    color: #520852;
+}
+.nav-container ul li a:hover{
+    color: #df4adf;
 }
