--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,39 @@
-<ul>
-    <li *ngFor="let food of foods">
-        <a href="#">
-            <img src="{{food.product_image}}" alt="product photo">
-            <div class="content">
-                <div class="name">
-                    {{food.product_name}}
+<header>
+    <div class="nav-container">
+        <div class="logo">
+            <a href="#" routerLink="/" class="logo">Logo</a>
+        </div>
+        <app-search></app-search>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#" routerLink="/cart">Cart</a>
+                </li>
+                <li>
+                    <a href="#" routerLink="/login">Login</a>
+                </li>
+                <li>
+                    <a href="#" routerLink="/register">Register</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
+<div class="container">
+    <ul>
+        <li *ngFor="let food of foods">
+            <a href="#">
+                <img src="{{food.product_image}}" alt="product photo">
+                <div class="content">
+                    <div class="name">
+                        {{food.product_name}}
+                    </div>
+                    <div class="price">
+                        {{food.product_price |currency:'KSH '}}
+                    </div>
                 </div>
-                <div class="price">
-                    {{food.product_price |currency:'KSH '}}
-                </div>
-            </div>
-        </a>
-    </li>
-</ul>
+            </a>
+        </li>
+    </ul>
+</div>
