add tags functionality

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -27,6 +27,9 @@ header{
     color: #df4adf;
 }
 /* Main body */
+.container{
+    display: flex;
+}
 .container ul{
     display: flex;
     align-items: center;
