--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,6 +21,7 @@
 </header>
 
 <div class="container">
+    <app-tags></app-tags>
     <ul>
         <li *ngFor="let food of foods">
             <a href="#">
