--- a/src/app/tags/tags.component.css
+++ b/src/app/tags/tags.component.css
@@ -1,7 +1,7 @@
 div{
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: center; */
+    justify-content: center;
 }
 div a{
     background-color: #E4E4E4;
