--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -2,8 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Kumbh Sans', sans-serif;
-    letter-spacing: 3px;
 }
 body {
     display: flex;
@@ -75,6 +73,11 @@ form {
     font-weight: 600;
     color: #444;
 }
+
+.error{
+    color: red;
+    font-size: 15px;
+}
 button{
     width: 150px;
     height: 50px;
@@ -95,7 +98,9 @@ a {
     text-decoration: none;
     color: #df4adf;
 }
-
+.toRegisterMobile{
+    display: none;
+}
 .switchPage{
     background: linear-gradient(50deg,#003200,#001D00);
     width: 100%;
@@ -103,7 +108,8 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 2rem;
 }
 .content{
     display: flex;
@@ -139,4 +145,41 @@ span{
     color: #df4adf;
     font-weight: 600;
     text-transform: uppercase;
+}
+
+/* responsiveness */
+@media (max-width:779px) {
+    .container {
+        width: 100vw;
+        height: 100vh;
+        box-shadow: none;
+    }
+}
+@media (max-width:635px) {
+    form {
+        width: 80%;
+    }
+
+    .container{
+        display: flex;
+        flex-direction: column;
+        box-shadow: none;
+        height: 60vh;
+    }
+    .login-page{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .switchPage {
+        display: none;
+    }
+    .toRegisterMobile {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: -30px;
+    }
 }
