--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
-  @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
   *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Kumbh Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 18px;
-    letter-spacing: 2px;
+    letter-spacing: 1.5px;
   }
   a{
     text-decoration: none;
