--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -1,1 +1,23 @@
-<p>product-page works!</p>
+<div class="container">
+    <img [src]="food.product_image" [alt]="food.product_name">
+
+    <div class="details">
+        <div class="header">
+            <span class="name">
+                {{food.product_name}}
+            </span>
+            <div class="tags">
+                <app-tags [productPageTags]="food.tags" justifyContent="start"></app-tags>
+            </div>
+        </div>
+        <div class="prices">
+            <span class="price">{{food.product_price | currency:'KSH '}}</span>
+        </div>
+        <div class="description">
+            <h2>Product Description</h2>
+            <hr>
+            <span>{{food.description}}</span>
+        </div>
+        <button>Add to Cart</button>
+    </div>
+</div>
