--- a/src/app/tags/tags.component.html
+++ b/src/app/tags/tags.component.html
@@ -1,5 +1,12 @@
-<div class="tags" *ngIf="tags">
+<div class="tags" *ngIf="tags" [style.justifyContent]="justifyContent">
     <a *ngFor="let tag of tags" routerLink="/tag/{{tag.name}}">
         {{tag.name}}
     </a>
 </div>
+
+<div class="tags" *ngIf="productPageTags" [style.justifyContent]="justifyContent">
+    <a *ngFor="let tagName of productPageTags" routerLink="/tag/{{tagName}}">
+        {{tagName}}
+    </a>
+</div>
+
