--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -98,6 +98,42 @@ a {
     text-decoration: none;
     color: #df4adf;
 }
+.open-modal{
+    cursor: pointer;
+}
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.6);
+  }
+  
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 3px solid #000;
+    width: 50%;
+  }
+.close {
+    color: #520852;
+    float: right;
+    font-size: 2rem;
+    font-weight: bold;
+}
+  
+.close:hover,.close:focus {
+    color: #df4adf;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 .toRegisterMobile{
     display: none;
 }
