--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -18,6 +18,6 @@
             <hr>
             <span>{{food.description}}</span>
         </div>
-        <button>Add to Cart</button>
+        <button (click)="addToCart()">Add to Cart</button>
     </div>
 </div>
