--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,6 +22,7 @@
 
 <div class="container">
     <app-tags></app-tags>
+    <app-notfound [visible]="!foods || foods.length<=0"></app-notfound>
     <ul>
         <li *ngFor="let food of foods">
             <a routerLink="/product/{{food.product_id}}">
