--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<app-notfound [visible]="!food"></app-notfound>
+<div *ngIf="food" class="container">
     <img [src]="food.product_image" [alt]="food.product_name">
 
     <div class="details">
