--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,7 +21,7 @@
 </header>
 
 <div class="container">
-    <app-tags></app-tags>
+    <app-categories></app-categories>
     <app-notfound [visible]="!foods || foods.length<=0"></app-notfound>
     <ul>
         <li *ngFor="let food of foods">
