--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -8,7 +8,7 @@
                 {{food.product_name}}
             </span>
             <div class="tags">
-                <app-tags [productPageTags]="food.tags" justifyContent="start"></app-tags>
+                <app-categories [productPageCategories]="food.category" justifyContent="start"></app-categories>
             </div>
         </div>
         <div class="prices">
